# ecxon-connect

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml  virustotal.yml
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: http_server.rs  lib.rs  main.rs  probe.rs  tray.rs
